--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -81,6 +81,13 @@ $gray-medium-light: #eaeaea;
   }
 }
 
+/* 小さめのコンテナ */
+.container-small {
+  max-width: 560px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
 /* figcaptureの表示数を強引にレスポンシブにした */
 @media screen and (max-width: 440px) {
   .ogp {
@@ -226,11 +233,19 @@ section {
   overflow: auto;
 }
 
+input {
+  font-size: 1rem;
+}
+
 textarea {
   resize: vertical;
   height: 64px;
   border: 2px solid #dce4ec;
   font-size: 1rem;
+}
+
+.form-control {
+  font-size: 1rem !important;
 }
 
 .center {
