sytle: change font-size in header search form

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -443,6 +443,7 @@ header {
         .input-group {
           input.form-control {
             max-width: 104px;
+            font-size: 14px;
           }
         }
       }
