--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -427,7 +427,7 @@ header {
   .navbar-header {
     display: flex;
     align-items: center;
-    column-gap: 16px;
+    column-gap: 8px;
     #service_logo {
       height: 50px;
       flex-shrink: 0;
@@ -443,7 +443,7 @@ header {
         .input-group {
           input.form-control {
             max-width: 104px;
-            font-size: 14px;
+            font-size: 14px !important;
           }
         }
       }
