--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <% container_class = request.path_info == root_path ? "container-fluid" : "container-large" %>
+  <% container_class = request.path_info == root_path ? "container-full" : "container-large" %>
   <div class=<%= container_class %>>
     <small style="margin:0 16px">
       <%= link_to image_tag("logo_alfnet.png", alt: "alfnet logo", height: "28px"),
