--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -48,37 +48,41 @@
   
 <% end %>
 
-<ul id="activityTab" class="nav nav-tabs nav-fill">
-  <li class="nav-item active">
-    <a href="#contents1" data-toggle="tab">Microposts (<%= @userprofile.microposts.count %>)</a>
-  </li>
-  <li class="nav-item">
-    <a href="#contents2" data-toggle="tab" id="comments-and-likes-tab">Comments & Likes</a>
-  </li>
-</ul>
-
-<div class="tab-content">
-  <div id="contents1" class="tab-pane active fade in">
-    <% if @userprofile.microposts.any? %>
-      <ol class="microposts">
-        <%= render @microposts %>
-      </ol>
-      <div class='center'><%= paginate @microposts %></div>
-    <% else %>
-      <p>No microposts</p>
-    <% end %>
-  </div>
-  
-  <div id="contents2" class="tab-pane fade">
-    <% if @comments_and_likes.any? %>
-      <ol class="microposts jscroll-reaction">
-        <% @comments_and_likes.each do |activity| %>
-          <%= render partial: 'notifications/comment_and_like', locals: {activity: activity} %>
-        <% end %>
-        <div class='center'><%= paginate @comments_and_likes %></div>
-      </ol>
-    <% else %>
-      <p>No comments, likes</p>
-    <% end %>
-  </div>
+<div class="tab">
+  <%= link_to "Materials", user_path(@userprofile, tab: "materials"), id: "materials_tab" %>
+  <%= link_to "Microposts", user_path(@userprofile, tab: "microposts"), id: "microposts_tab" %>
+  <%= link_to "Responses", user_path(@userprofile, tab: "responses"), id: "responses_tab" %>
 </div>
+
+<% if @tab === "materials" %>
+  <% if @materials.any? %>
+    <ol class="materials">
+      <%= render partial: 'microposts/materials', collection: @materials, as: 'micropost' %>
+    </ol>
+    <div class='center'><%= paginate @materials, param_name: 'material_page' %></div>
+  <% else %>
+    <p>No materials</p>
+  <% end %>
+
+<% elsif @tab === "microposts" %>
+  <% if @microposts.any? %>
+    <ol class="microposts">
+      <%= render @microposts %>
+    </ol>
+    <div class='center'><%= paginate @microposts, param_name: 'micropost_page' %></div>
+  <% else %>
+    <p>No microposts</p>
+  <% end %>
+
+<% else %>
+  <% if @comments_and_likes.any? %>
+    <ol class="microposts jscroll-reaction">
+      <% @comments_and_likes.each do |activity| %>
+        <%= render partial: 'notifications/comment_and_like', locals: {activity: activity} %>
+      <% end %>
+      <div class='center'><%= paginate @comments_and_likes %></div>
+    </ol>
+  <% else %>
+    <p>No comments, likes</p>
+  <% end %>
+<% end %>
