--- a/app/views/microposts/_response_form_side.html.erb
+++ b/app/views/microposts/_response_form_side.html.erb
@@ -22,7 +22,7 @@
 <div class="icon-group">
   <span class="btn-comment<%= micropost.id %> btn-comment-wrap">
     <% comment_count = micropost.comments.where(parent_id: nil).count %>
-    <%= button_to micropost, { method: :get, params: {userprofile_id: @userprofile.id, comment_open: true}, class: "btn-comment btn-link" } do %>
+    <%= button_to micropost, { method: :get, params: {comment_open: true}, class: "btn-comment btn-link" } do %>
       <i class="fa-regular fa-comment-dots"></i> <%= comment_count %>
     <% end %>
   </span>
