--- a/app/views/microposts/_tag_search_form.html.erb
+++ b/app/views/microposts/_tag_search_form.html.erb
@@ -28,7 +28,7 @@
       <% end %>
     </div>
 
-    <div class="tag_search_wrap">
+    <div class="tag-search-wrap">
       <div class="input-group">
         <%= f.text_field :tags, placeholder: "タグ or キーワード", value: selected_tags, data: {role: "tagsinput"}, style: "margin: 0; border: none;" %>
         <span class="input-group-btn">
