--- a/app/views/comments/_replies.erb
+++ b/app/views/comments/_replies.erb
@@ -1,4 +1,4 @@
-<%= button_to close_micropost_comment_path(@feedmicropost.id, @comment.id), { method: :get, params: {userprofile_id: @userprofile.id}, class: "reply-close-btn btn-link", style: "text-align: center; background-color: #95a5a6; margin: 0px; border-top-left-radius: 16px; border-top-right-radius: 16px; width: 100%; height: 20px;", remote: true } do %>
+<%= button_to close_micropost_comment_path(@feedmicropost.id, @comment.id), { method: :get, class: "reply-close-btn btn-link", style: "text-align: center; background-color: #95a5a6; margin: 0px; border-top-left-radius: 16px; border-top-right-radius: 16px; width: 100%; height: 20px;", remote: true } do %>
   <i class="fa-solid fa-caret-up fa-lg" data-fa-transform="up-1" style="color: white;"></i>
 <% end %>
 
