--- a/app/views/likes/_like_modal.html.erb
+++ b/app/views/likes/_like_modal.html.erb
@@ -1,7 +1,7 @@
 <div class="like-modal-wrapper" >
   <div class="like-modal">
     <span class="close-modal">
-      <% likepath = send("close_#{likeable.class.name.downcase}_likes_path", likeable.id, userprofile_id: @userprofile.id) %>
+      <% likepath = send("close_#{likeable.class.name.downcase}_likes_path", likeable.id) %>
       <%= link_to likepath, remote: true do %>
         <i class="fa fa-2x fa-times"></i>
       <% end %>
