--- a/app/views/microposts/_materials.html.erb
+++ b/app/views/microposts/_materials.html.erb
@@ -26,10 +26,10 @@
               </div>
             </div>
             <div class="text-right">
-              <% if request.path_info === root_path %>
-                <%= link_to "詳細を開く", micropost %>
-              <% else %>
+              <% if request.path_info.start_with?('/microposts/') %>
                 <%= link_to "別タブで開く", link_url, target: :_blank, rel: "noopener noreferrer" %>
+              <% else %>
+                <%= link_to "詳細を開く", micropost %>
               <% end %>
             </div>
           </div>
@@ -37,9 +37,18 @@
 
       <% elsif micropost.image.attached? %>
         <div class="img-container">
-          <!-- link_to micropost.display_image, "data-lightbox": micropost.display_image do %>-->
-          <%= image_tag micropost.display_image %>
-          <!--end %>-->
+          <div class="img-wrap">
+            <!-- link_to micropost.display_image, "data-lightbox": micropost.display_image do %>-->
+            <%= image_tag micropost.display_image %>
+            <!--end %>-->
+          </div>
+          <div class="text-right">
+            <% if request.path_info.start_with?('/microposts')  %>
+              <%= "　" %>
+            <% else %>
+              <%= link_to "詳細を開く", micropost %>
+            <% end %>
+          </div>
         </div>
 
       <% elsif micropost.links.present? %>
@@ -51,10 +60,10 @@
                 <%= oembed.html_safe %>
               </div>
               <div class="text-right">
-                <% if request.path_info === root_path %>
-                  <%= link_to "詳細を開く", micropost %>
-                <% else %>
+                <% if request.path_info.start_with?('/microposts/') %>
                   <%= link_to "別タブで開く", micropost.links, target: :_blank, rel: "noopener noreferrer" %>
+                <% else %>
+                  <%= link_to "詳細を開く", micropost %>
                 <% end %>
               </div>
             </div>
@@ -70,10 +79,10 @@
                 </div>
               </div>
               <div class="text-right">
-                <% if request.path_info === root_path %>
-                  <%= link_to "詳細を開く", micropost %>
-                <% else %>
+                <% if request.path_info.start_with?('/microposts')  %>
                   <%= link_to "別タブで開く", pdf_link, target: :_blank, rel: "noopener noreferrer" %>
+                <% else %>
+                  <%= link_to "詳細を開く", micropost %>
                 <% end %>
               </div>
             </div>
@@ -85,27 +94,33 @@
             <div class="links ogp">
               <div class="links-container">
                 <div class="links-wrap">
-                  <figure>
-                    <% cache(og.images.first, expires_in: 600.seconds) do %>
-                      <% if og.title.present? %>
-                        <%= link_to image_tag(og.images.first, alt: og.title), og.url, target: :_blank, rel: "noopener noreferrer" %>
-                      <% elsif og.description.present? %>
-                        <%= link_to image_tag(og.images.first, alt: og.description), og.url, target: :_blank, rel: "noopener noreferrer" %>
-                      <% else %>
-                        <%= link_to image_tag(og.images.first), og.url, target: :_blank, rel: "noopener noreferrer" %>
+                  <% begin %>
+                    <figure>
+                      <% cache(og.images.first, expires_in: 600.seconds) do %>
+                        <% if og.title.present? %>
+                          <%= link_to image_tag(og.images.first, alt: og.title), og.url, target: :_blank, rel: "noopener noreferrer" %>
+                        <% elsif og.description.present? %>
+                          <%= link_to image_tag(og.images.first, alt: og.description), og.url, target: :_blank, rel: "noopener noreferrer" %>
+                        <% else %>
+                          <%= link_to image_tag(og.images.first), og.url, target: :_blank, rel: "noopener noreferrer" %>
+                        <% end %>
                       <% end %>
+                      <figcaption>
+                        <span class=ogp_title><%= "[#{og.title}]" if og.title.present? %></span>
+                        <span class=ogp_description><%= og.description if og.description.present? %>
+                      </figcaption>
+                    </figure>
+                  <% rescue ArgumentError => e %>
+                    <%= link_to micropost do %>
+                      <%= image_tag("no_content.png", alt: "no content") %>
                     <% end %>
-                    <figcaption>
-                      <span class=ogp_title><%= "[#{og.title}]" if og.title.present? %></span>
-                      <span class=ogp_description><%= og.description if og.description.present? %>
-                    </figcaption>
-                  </figure>
+                  <% end %>
                 </div>
                 <div class="text-right">
-                  <% if request.path_info === root_path %>
-                    <%= link_to "詳細を開く", micropost %>
-                  <% else %>
+                  <% if request.path_info.start_with?('/microposts')  %>
                     <%= link_to "別タブで開く", og.url, target: :_blank, rel: "noopener noreferrer" %>
+                  <% else %>
+                    <%= link_to "詳細を開く", micropost %>
                   <% end %>
                 </div>
               </div>
@@ -115,9 +130,18 @@
 
       <% else %>
         <div class="img-container">
-          <%= link_to micropost do %>
-            <%= image_tag("no_content.png", alt: "no content") %>
-          <% end %>
+          <div class="img-wrap">
+            <%= link_to micropost do %>
+              <%= image_tag("no_content.png", alt: "no content") %>
+            <% end %>
+          </div>
+          <div class="text-right">
+            <% if request.path_info.start_with?('/microposts')  %>
+              <%= "　" %>
+            <% else %>
+              <%= link_to "詳細を開く", micropost %>
+            <% end %>
+          </div>
         </div>
       <% end %>
     </div>
@@ -166,15 +190,15 @@
               <span class="btn-comment<%= micropost.id %> btn-comment-wrap">
                 <% comment_count = micropost.comments.where(parent_id: nil).count %>
 
-                <% if request.path_info === root_path %>
+                <% if request.path.start_with?('/microposts/') %>
 
-                  <%= button_to micropost, { method: :get, params: {userprofile_id: @userprofile.id, comment_open: true}, class: "btn-comment btn-link" } do %>
+                  <%= button_to comment_path(micropost.id), { method: :get, class: "btn-comment btn-link", remote: true } do %>
                     <i class="fa-regular fa-comment-dots"></i> <%= comment_count %>
                   <% end %>
 
                 <% else %>
 
-                  <%= button_to comment_path(micropost.id), { method: :get, params: {userprofile_id: @userprofile.id}, class: "btn-comment btn-link", remote: true } do %>
+                  <%= button_to micropost, { method: :get, params: {comment_open: true}, class: "btn-comment btn-link" } do %>
                     <i class="fa-regular fa-comment-dots"></i> <%= comment_count %>
                   <% end %>
 
@@ -211,11 +235,11 @@
     <div class="tag-container">
       <div class="tags-wrap" style="margin-bottom: 0;">
         <%# 一覧画面ではタグは５個まで表示 %>
-        <% tags = request.path_info.start_with?('/microposts') ? micropost.tags : micropost.tags.take(5) %>
+        <% tags = request.path_info.start_with?('/microposts/') ? micropost.tags : micropost.tags.take(5) %>
         <% tags.each do |tag| %>
           <%= link_to tag.name, microposts_path(click_tag: tag.name), class: "btn-tag" %>
         <% end %>
-        <% if !request.path_info.start_with?('/microposts') && micropost.tags.size > 5 %>
+        <% if !request.path_info.start_with?('/microposts/') && micropost.tags.size > 5 %>
           <span>...</span>
         <% end %>
         <%= link_to edit_micropost_tags_path(micropost), class: "btn btn-tagsedit", remote: true do %>
