--- a/app/views/tags/_show_tags.html.erb
+++ b/app/views/tags/_show_tags.html.erb
@@ -1,12 +1,12 @@
 <%# 一覧画面ではタグは５個まで表示 %>
-<% tags = request.path_info.start_with?('/microposts') ? micropost.tags : micropost.tags.take(5) %>
+<% tags = request.path_info.start_with?('/microposts/') ? micropost.tags : micropost.tags.take(5) %>
 
 <% if tags.count != 0 %>
   <div class="tags-wrap">
     <% tags.each do |tag| %>
       <%= link_to tag.name, microposts_path(click_tag: tag.name), class: "btn-tag" %>
     <% end %>
-    <% if !request.path_info.start_with?('/microposts') && micropost.tags.size > 5 %>
+    <% if !request.path_info.start_with?('/microposts/') && micropost.tags.size > 5 %>
       <span>...</span>
     <% end %>
 
